--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-@layer base {
+@media (prefers-color-scheme: dark) {
   :root {
-    --radius: 0.5rem;
+    --background: #0a0a0a;
+    --foreground: #ededed;
   }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
 }
